--- a/tox.ini
+++ b/tox.ini
@@ -1,48 +1,34 @@
-; a generative tox configuration, see: https://testrun.org/tox/latest/config.html#generative-envlist
-
 [tox]
 envlist =
     clean,
     check,
-    {py27,py33,py34,py35,py36,pypy},
+    3.6-cover,
+    3.6-nocov,
     report,
     docs
 
 [testenv]
 basepython =
-    pypy: {env:TOXPYTHON:pypy}
-    {py27,docs,spell}: {env:TOXPYTHON:python2.7}
-    py33: {env:TOXPYTHON:python3.3}
-    py34: {env:TOXPYTHON:python3.4}
-    py35: {env:TOXPYTHON:python3.5}
-    py36: {env:TOXPYTHON:python3.6}
-    {bootstrap,clean,check,report,coveralls,codecov}: {env:TOXPYTHON:python3}
+    {docs,spell}: {env:TOXPYTHON:python2.7}
+    {bootstrap,clean,check,report,extension-coveralls,coveralls,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
 passenv =
     *
-usedevelop = false
 deps =
     pytest
     pytest-travis-fold
-    pytest-cov
 commands =
-    {posargs:py.test --cov --cov-report=term-missing -vv tests}
+    {posargs:py.test -vv}
 
-[testenv:bootstrap]
-deps =
-    jinja2
-    matrix
-skip_install = true
-commands =
-    python ci/bootstrap.py
 [testenv:spell]
 setenv =
     SPELLCHECK=1
 commands =
     sphinx-build -b spelling docs dist/docs
 skip_install = true
+usedevelop = false
 deps =
     -r{toxinidir}/docs/requirements.txt
     sphinxcontrib-spelling
@@ -52,9 +38,17 @@ deps =
 deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
-    sphinx-build {posargs:-E} -b doctest docs dist/docs
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
+
+[testenv:bootstrap]
+deps =
+    jinja2
+    matrix
+skip_install = true
+usedevelop = false
+commands =
+    python ci/bootstrap.py
 
 [testenv:check]
 deps =
@@ -65,6 +59,7 @@ deps =
     pygments
     isort
 skip_install = true
+usedevelop = false
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
@@ -75,6 +70,7 @@ commands =
 deps =
     coveralls
 skip_install = true
+usedevelop = false
 commands =
     coveralls []
 
@@ -82,6 +78,7 @@ commands =
 deps =
     codecov
 skip_install = true
+usedevelop = false
 commands =
     coverage xml --ignore-errors
     codecov []
@@ -90,6 +87,7 @@ commands =
 [testenv:report]
 deps = coverage
 skip_install = true
+usedevelop = false
 commands =
     coverage combine --append
     coverage report
@@ -98,5 +96,19 @@ commands =
 [testenv:clean]
 commands = coverage erase
 skip_install = true
+usedevelop = false
 deps = coverage
 
+[testenv:3.6-cover]
+basepython = {env:TOXPYTHON:python3.6}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
+commands =
+    {posargs:py.test --cov --cov-report=term-missing --cov-fail-under 98 -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.6-nocov]
+basepython = {env:TOXPYTHON:python3.6}
