--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 envlist =
     clean,
     check,
+    3.5-cover,
+    3.5-nocov,
     3.6-cover,
     3.6-nocov,
     report,
@@ -98,6 +100,20 @@ commands = coverage erase
 skip_install = true
 usedevelop = false
 deps = coverage
+
+[testenv:3.5-cover]
+basepython = {env:TOXPYTHON:python3.5}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
+commands =
+    {posargs:py.test --cov --cov-report=term-missing --cov-fail-under 98 -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:3.5-nocov]
+basepython = {env:TOXPYTHON:python3.5}
 
 [testenv:3.6-cover]
 basepython = {env:TOXPYTHON:python3.6}
